--- a/index.html
+++ b/index.html
@@ -184,6 +184,62 @@
           </tbody>
         </table>
       </div>
+      <!--Table ends here-->
+
+      <!--Images starts here-->
+      <div class="row bg-success">
+      <div class="col"><img src="../images (33).jpeg" class="rounded" alt="unknown image"></div>
+      <div class="col"><img src="../images (33).jpeg" class="rounded-circle" alt="unknown image"></div>
+      <div class="col"><img src="../images (33).jpeg" class="img-thumbnail bg-danger" alt="unknown image"></div>
+      </div>
+
+    <div class="container">
+      <button type="button" class="btn">Basic</button>
+      <button type="button" class="btn btn-primary btn-lg">Primary</button>
+      <button type="button" class="btn btn-secondary btn-sm">Secondary</button>
+      <button type="button" class="btn btn-success">Success</button>
+      <button type="button" class="btn btn-info">Info</button>
+      <button type="button" class="btn btn-warning">Warning</button>
+      <button type="button" class="btn btn-danger">Danger</button>
+      <button type="button" class="btn btn-dark">Dark</button>
+      <button type="button" class="btn btn-light">Light</button>
+      <button type="button" class="btn btn-link">Link</button>
+    </div>
+      <br><br>
+
+    <div>
+      <button type="button" class="btn btn-outline-primary">Primary</button>
+      <button type="button" class="btn btn-outline-secondary">Secondary</button>
+      <button type="button" class="btn btn-outline-success">Success</button>
+      <button type="button" class="btn btn-outline-info">Info</button>
+      <button type="button" class="btn btn-outline-warning">Warning</button>
+      <button type="button" class="btn btn-outline-danger">Danger</button>
+      <button type="button" class="btn btn-outline-dark">dark</button>
+    </div>
+      <br><br>
+
+<div class="d-grid">
+    <button type="button" class="btn btn-primary btn-block">Full-Width Button</button>
+</div>
+<br><br>
+
+<button type="button" class="btn btn-primary active">Active Primary</button>
+<button type="button" class="btn btn-secondary" disabled>Disabled</button>
+<br><br>
+
+<button class="btn btn-primary">
+    <span class="spinner-border spinner-border-sm"></span>
+    Loading...
+</button>
+<button class="btn btn-danger" disabled>
+    <span class="spinner-border spinner-border-sm"></span>
+    Loading...
+</button>
+<button class="btn btn-warning" disabled>
+    <span class="spinner-grow spinner-grow-sm"></span>
+    Loading..
+</button>
+
 
       <!--Javascript bundle popper-->
       <script src="js/bootstrap.bundle.js"></script>
